# MV-Coach-Eval

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  Project_Spec.md  QUICK_REFERENCE.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
configs/: config.yaml
configs/data/: motionsense.yaml  uci_har.yaml
configs/model/: cnn1d.yaml  tcn.yaml
configs/robustness/: default.yaml  disabled.yaml
mv_coach/: __init__.py  benchmark_script.py  compare_models.py
mv_coach/core/: __init__.py  config.py  device.py  exceptions.py  logging.py  version.py
mv_coach/data/: loader.py  motionsense.py
mv_coach/evaluation/: __init__.py  comparator.py  metrics.py  robustness.py  rubric.py
mv_coach/models/: backbone.py  registry.py  uncertainty.py
mv_coach/serving/: __init__.py  inference.py
mv_coach/tracking/: __init__.py  experiment_tracker.py  lineage.py
tests/: conftest.py  test_core.py  test_data.py  test_evaluation.py  test_models.py
